--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wobile/settings",
+    "name": "wobile/yii2-settings",
     "description": "Yii2 settings with database module with GUI manager supported",
     "type": "yii2-extension",
     "license": "MIT",
